--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,5 +1,8 @@
 @use 'login.scss';
+@use 'auth.scss';
+@use 'register.scss';
 @use 'mainPage.scss';
+@use 'recipePage.scss';
 @use 'header.scss';
 @use 'recipeCard.scss';
 
