--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -10,6 +10,8 @@
 @use 'profilePage.scss';
 @use 'createRecipe.scss';
 @use 'ingredientsSearch.scss';
+@use 'collectionsPage.scss';
+@use 'collectionDetailPage.scss';
 
 * {
     margin: 0;
