--- a/client/src/styles/recipeCard.scss
+++ b/client/src/styles/recipeCard.scss
@@ -2,11 +2,17 @@
     width: 300px;
     border-radius: 8px;
     overflow: hidden;
+    margin-bottom: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     cursor: pointer;
     position: relative;
     background: white;
+
+    span {
+        font-size: 14px !important;
+        color: #515151 !important;
+    }
 
     &:hover {
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
@@ -15,11 +21,18 @@
 
     .recipe-author {
         font-style: italic;
+        color: #6e303c;
+        padding: 3px;
 
         :hover {
             text-decoration: underline;
         }
 
+    }
+
+    .recipe-description {
+        color: #333;
+        font-style: light;
     }
 }
 
@@ -84,6 +97,7 @@
     margin: 0 0 8px 0;
     font-size: 18px;
     color: #222;
+    font-style: bold;
 }
 
 .ingredients-preview {
